kubernetes/networking/traefik/dashboard/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-auth
  namespace: networking
spec:
  basicAuth:
    secret: traefik
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-redirect
  namespace: networking
spec:
  redirectRegex:
    regex: ^https://traefik\.chamburr.xyz/?$
    replacement: https://traefik.chamburr.xyz/dashboard/
