kubernetes/networking/traefik/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: >-
      networking-traefik-auth@kubernetescrd,networking-traefik-redirect@kubernetescrd,networking-global-internal-only@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: traefik.chamburr.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-internal
                port:
                  number: 8080
